# QuOp_MPI

./: .buildinfo  .f2py_f2cmap  .gitignore  CMakeLists.txt  CONTRIBUTORS.md  MANIFEST.in  Makefile  README.md  README.rst  TODO.md  a.out  bibliography.html  cite.html  compile.sh  developing_for_quop.html  downloadFindFFTW.cmake.in  examples.html  fqwao_mpi.f90  genindex.html  glossary.html  index.html  install.sh  objects.inv  package_overview.html  parallel_hdf5.f90  py-modindex.html  pyproject.toml  quop_functions.html  quop_mpi.html  qwao_mpi.def  qwao_mpi.py  readme_link.html  requirements.txt  sds_col.h5  search.html  searchindex.js  setup.cfg  setup.py  summary_of_contents.txt  theoretical_background.html
.github/workflows/: build.yaml  ci_ubuntu  ci_ubuntu.yaml  dev_build.yaml  dev_test.yaml  doc_pages.yml  test.yaml
_sources/: cite.rst.txt  developing_for_quop.rst.txt  glossary.rst.txt  index.rst.txt  package_overview.rst.txt  quop_functions.rst.txt  theoretical_background.rst.txt
_static/: maxcut_qaoa_probabilities.png:Zone.Identifier
benchmarks/: GENERATE_BENCHMARKS.sh  README.md  README.txt  RUN_BENCHMARKS.sh  base.slurm  benchmark.py  evolution_benchmark.py  qaoa_benchmark.py  qaoa_evolution.py  qaoa_qwoa_benchmark.py  qwoa_benchmark.py  slurm_gen.sh
benchmarks/plots/: evolution.py  optimisers.py  qwoa_execute.py  scaling.ipynb
benchmarks/quop_bench/: __init__.py  __main__.py  benchmark.py  tracer.py
benchmarks/resources/: base.slurm  slurm_gen.sh  workstation.slurm
container/: README.md  README.rst  build.slurm  download.slurm  quop_mpi.def  qwao_mpi.def  qwao_mpi_openmpi.def  remote_build.sh  sylabs-token
docs/: README.md  requirements.txt
docs/background/: combinatorial.rst  multivariable.rst
docs/source/: Symbols.rst  bibliography.bib  cite.rst  conf.py  container_link.rst  examples.rst  index.rst  quop_functions.rst  quop_mpi.rst  qwao_mpi.rst  symbols.rst  usage_example.rst
examples/: README.md  intro_to_MPI.py  intro_to_mpi.py  mpi_example.py  qaoa_equal.py  qaoa_localized.py  qaoa_qwoa_benchmark.py  qaoa_qwoa_execute.py  qaoa_random.py  qaoa_split.py  quop_qualities.py  quop_tutorial.py  qwao_circle_equal.py  qwao_circle_localized .py  qwao_circle_random.py  qwao_circle_split.py  qwao_complete_equal.py  qwao_complete_localized.py  qwao_complete_random.py  qwao_complete_split.py  run.sh
examples/grovers/: grovers_non_parallel_gradient.py  grovers_parallel_gradient.py
examples/maxcut/: README.md  maxcut.py  maxcut_parallel_qualities.py  maxcut_plots.py  parallel_qualities.py
examples/maxcut_benchmark/: '  maxcut_plots.py
examples/maxcut_extended/: README.md  maxcut_extended.py  maxcut_extended_plots.py
examples/meta/: maxcut_swarm_execute.py
examples/multivariable/: README.txt  env.sh  rastrigin_function.py
examples/portfolio_rebalancing/: README.md  parity.mtx  parity_mixer_export.py  portfolio.py  portfolio_plots.py  qaoaz_portfolio.py  qaoaz_qualities.py  qwoa_portfolio.py  qwoa_qualities.py
examples/tutorial/: 3_intro_to_quop.py  4_quop_qualities.py
experiments/cost_function/: Costfunction.csv  mpi_scipy.py
experiments/experiment_1/: RUN_ME.sh  experiment_1.py
experiments/experiment_2/: RUN_ME.sh  experiment_2.py
gravity_waves/: README.txt  grav_waves.py
gravity_waves/analysis/: GW170817__L1__theta1eta__Ns_256_256.ipynb
gravity_waves/gw_data/: Notes.txt  Plot cost values.ipynb  Quality signal-noise decomposition.ipynb  Retrieving GW170817 data.ipynb  Retrieving GW200115_042309.ipynb
gravity_waves/slurm_scripts/: exp07_qaoa_complete.slurm  exp07_qaoa_hypercube.slurm  exp07_qmoa_complete.slurm  exp07_qmoa_cycle.slurm  exp08_qaoa_complete.slurm  exp08_qaoa_hypercube.slurm  exp08_qmoa_complete.slurm  exp08_qmoa_cycle.slurm  exp09_qaoa_complete.slurm  exp09_qaoa_hypercube.slurm  exp09_qmoa_complete.slurm  exp09_qmoa_cycle.slurm  exp1.slurm  exp10_qaoa_complete.slurm  exp10_qaoa_hypercube.slurm  exp10_qmoa_complete.slurm  exp10_qmoa_cycle.slurm  exp1_qaoa_complete.slurm  exp1_qaoa_hypercube.slurm  exp1_qmoa_complete.slurm  exp1_qmoa_cycle.slurm  exp2_qaoa_complete.slurm  exp2_qaoa_hypercube.slurm  exp2_qmoa_complete.slurm  exp2_qmoa_cycle.slurm  exp3_qaoa_complete.slurm  exp3_qaoa_hypercube.slurm  exp3_qmoa_complete.slurm  exp3_qmoa_cycle.slurm  exp4_qaoa_complete.slurm  exp4_qaoa_hypercube.slurm  exp4_qmoa_complete.slurm  (+11 more)
installation_scripts/: install-ubuntu.20.4.sh
quop_mpi/: Ansatz.py  MPI.py  Unitary.py  __init__.py  __main__.py  algorithms.py  ansatz.py  config.py  initial_state.py  interface.py  log.csv  mpi_costfunction.py  mpi_test.py  operators.py  params.py  qualities.py  states.py  unitaries.py  utils.py
qwao_mpi/: MPI.py  __init__.py  __main__.py  graph_array.py  qualities.py
src/: .Makefile.swp  CMakeLists.txt  Makefile  Makefile_2  Makefile_gcc10  add_f2py_library.cmake  build.slurm  compile.sh  compile_test.sh  context_wrapper.f90  expm.f90  fCQAOA.f90  fCQAOA.pyf  fCQAOA_.pyf  fCQAOA_bak.f90  fMPI.f90  fMPI.pyf  fqwao_mpi.f90  fqwoa_mpi.f90  fqwoa_mpi_test.f90  gen_pyf.sh  iso_precisions.f90  mixers_mpi.f90  one_norms.f90  propagator_wrapper.f90  sparse.f90  sparse_graphs.f90
src/cartesian/: CMakeLists.txt  cartesian.f90
src/csr_generators/: CMakeLists.txt  csr_generators.f90
src/io/: CMakeLists.txt  io.f90
src/mpi/: CMakeLists.txt  mpi_circulant_operators.f90  mpi_context.f90
src/mpi/circulant/: CMakeLists.txt  mpi_circulant.f90
src/mpi/diagonal/: CMakeLists.txt  mpi_diagonal.f90
src/mpi/multivariable/: CMakeLists.txt  mpi_composite.f90  qhost_fourier.f08
src/mpi/sparse/: CMakeLists.txt  expm.f90  mpi_sparse.f90  one_norms.f90  sparse.f90
src/sparse_vector/: CMakeLists.txt  sparse_vector.f90
src/test/: .gitignore  Makefile  SpMV_Series.f90  dagger.f90  eigen.f90  run_test.sh
test/: SpMV_Series.f90  test_filenames.py  test_meta.py  test_mpi.py  test_swarm_execute.py
tests/: ansatz.py  ansatz_evolve_state.py  plan.py  qaoa_benchmark_global.py  qaoa_class.py  qaoa_execute.py  qaoa_execute_global.py  qwoa_class.py  qwoa_execute.py  qwoa_execute_global.py
(+942 files in other folders)
